--- a/exercícios/exe022/fundo002.html
+++ b/exercícios/exe022/fundo002.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização dos fundos</title>
+    <style>
+        body{
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 20%;
+            background-repeat: repeat-y;
+            background-position: center;
+            background-attachment: scroll;
+        }
+    </style>
 </head>
 <body>
-    
+
 </body>
 </html>
