--- a/exercícios/exe022/fundo002.html
+++ b/exercícios/exe022/fundo002.html
@@ -7,10 +7,8 @@
     <style>
         body{
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 20%;
+            background-size: 100px 100px;
             background-repeat: repeat-y;
-            background-position: center;
-            background-attachment: scroll;
         }
     </style>
 </head>
