criando fundo005 e praticando

--- a/exercícios/exe022/fundo005.html
+++ b/exercícios/exe022/fundo005.html
@@ -6,16 +6,14 @@
     <title>Posicionamento</title>
     <style>
         body{
+            background-image: url(imagens/wallpaper005\ \(1\).jpg);
             height: 98vh;
-            border: 1px dashed black;
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px;
-            background-repeat: no-repeat;
-            background-position: right bottom;
+            background-position: center top;
         }
+
     </style>
 </head>
 <body>
-    
+
 </body>
 </html>
