--- a/exercícios/exe022/fundo004.html
+++ b/exercícios/exe022/fundo004.html
@@ -9,7 +9,7 @@
             height: 98vh;
             border: 1px dashed black;
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px;
+            background-size: 100px; /* tamanho da miniatura*/
             background-repeat: no-repeat;
             background-position: right bottom;
         }
