--- a/exercícios/exe022/fundo006.html
+++ b/exercícios/exe022/fundo006.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 06</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002\ \(1\).jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /*shorthand background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            /*background: black url(imagens/wallpaper002\ \(1\).jpg) center center no-repeat fixed;
+            background-size: cover;*/ /*size não funciona shorthand, mesmo na W3c dizendo que funciona*/
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px; /*é a largura maxima que o main vai ocupar após passar na viewporte de 400px ele vai continuar o conteúdo com 400 não vai aumentar mais e quando for menor que 400 ele vai se adaptar*/
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
